--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "modelcontext-server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.10.2",
     "express": "^5.1.0",
